force-app/main/default/objects/Feedback_Share__c/Feedback_Share__c.object-meta.xml
<CustomObject>
    <description>Manage secure sharing of interview feedback with mentors and coaches</description>
    <label>Feedback Share</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Share Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Shares</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>