force-app/main/default/objects/Feedback_Share__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <description>Level of access granted to the shared user</description>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
                <default>true</default>
                <label>Read Only</label>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Full Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>