force-app/main/default/objects/Feedback_Share__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date when the share access expires</description>
    <label>Expiration Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>