force-app/main/default/objects/Feedback_Share__c/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Interview Feedback record being shared</description>
    <label>Interview Feedback</label>
    <referenceTo>Interview_Feedback__c</referenceTo>
    <relationshipLabel>Feedback Shares</relationshipLabel>
    <relationshipName>Feedback_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>