force-app/main/default/objects/Feedback_Share__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag indicating if the share is currently active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>