force-app/main/default/objects/Feedback_Share__c/fields/Share_Message__c.field-meta.xml
<CustomField>
    <fullName>Share_Message__c</fullName>
    <label>Share Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>