force-app/main/default/objects/Feedback_Share__c/fields/Share_Token__c.field-meta.xml
<CustomField>
    <fullName>Share_Token__c</fullName>
    <description>Unique token for secure access to shared feedback</description>
    <externalId>true</externalId>
    <label>Share Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>