force-app/main/default/objects/Feedback_Share__c/fields/Shared_With_Email__c.field-meta.xml
<CustomField>
    <fullName>Shared_With_Email__c</fullName>
    <description>Email address of the person the feedback is shared with</description>
    <label>Shared With Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>